[package]
name = "pubsub-broker"
version = "0.1.0"
authors = ["Jack O'Sullivan <jackos1998@gmail.com>"]

[dependencies]
quick-error = "~1.2"
log = "~0.4"
simplelog = "~0.5"
bytes = "~0.4"
num_cpus = "~1.8"
crossbeam = "~0.4"
ctrlc = { version = "~3.0", features = [ "termination" ] }
pubsub-common = { path = "../pubsub-common" }
