[package]
name = "pubsub-broker"
version = "0.1.0"
authors = ["Jack O'Sullivan <jackos1998@gmail.com>"]

[dependencies]
debug_stub_derive = "~0.3"
quick-error = "~1.2"
log = "~0.4"
evmap = "~4.0"
crossbeam = "~0.5"
bytes = "~0.4"
num_cpus = "~1.8"
pubsub-common = { path = "../pubsub-common" }

[features]
unreliable = ["pubsub-common/unreliable"]
