[package]
name = "pubsub-interactive"
version = "0.1.0"
authors = ["Jack O'Sullivan <jackos1998@gmail.com>"]
edition = "2018"

[dependencies]
quick-error = "~1.2"
clap = "~2.32"
ctrlc = { version = "~3.0", features = [ "termination" ] }
cursive = { version = "~0.9" }
pubsub-client = { path = "../pubsub-client" }

[features]
unreliable = ["pubsub-client/unreliable"]
